--- a/gb/21/7/26/n13117328.md
+++ b/gb/21/7/26/n13117328.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eeygma3264/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eeygma3264/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eeygma3264/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：中南海内斗激烈的十件大事</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13117334-1-179.jpeg" />
 <h6></h6>
@@ -8,38 +8,46 @@
 	<p>【大纪元2021年07月27日讯】明年召开的中共二十大，是中共最高层权力再分配的一次大会，涉及中共中央总书记、中央军委主席、中共政治局常委等的换届，也涉及后年全国人大委员长、国务院总理、中央监察委主任、最高法院院长、最高检察院检察长等的换届。</p>
 <p>中共把什么看得最重？权力。谁有权，谁有理；谁有权，谁有利；谁有权，可能保命；谁无权，可能性命难保。</p>
 <p>2020年已经过半，中共高层围绕二十大的权力斗争，已全面展开。1至7月，与之相关的大事至少有以下10件：</p>
-<h2>一，杀<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E8%B5%96%E5%B0%8F%E6%B0%91.md#1">赖小民</a></h2>
-<p>1月29日，华融集团董事长<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E8%B5%96%E5%B0%8F%E6%B0%91.md#1">赖小民</a>，在天津被执行死刑。</p>
-<p>赖小民被控受贿17.88亿元人民币。1月5日，天津市第二中级法院以犯受贿等三项罪，判处赖小民死刑。赖不服，提起上诉。1月21日，天津市高级法院驳回上诉、维持原判。1月29日，赖被处死。</p>
+<h2>一，杀<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%96%E5%B0%8F%E6%B0%91.md#1">赖小民</a></h2>
+<p>1月29日，原华融集团董事长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%96%E5%B0%8F%E6%B0%91.md#1">赖小民</a>，在天津被执行死刑。</p>
+<p>赖小民被控受贿17.88亿元人民币。1月5日，天津市第二中级法院以犯受贿罪等，判处赖小民死刑。赖不服，提起上诉。1月21日，天津市高级法院驳回上诉、维持原判。1月29日，赖被处死。</p>
 <p>赖小民从被判死刑到执行死刑，仅用了24天，成为习上台八年以最快速度处决的大贪官。</p>
-<p>华融集团是中共最大的国有资产管理公司。赖小民案被称为中共建政以来“第一金融大案”。</p>
+<p>华融集团是中共四大国有资产管理公司中最大的一家。华融在香港与前中共政治局常委、国家副主席曾庆红侄女曾宝宝的花样年等有内在的经济关系。</p>
+<p>中纪委指赖小民“任人唯权、任人唯利、任人唯圈”。“任人唯权”是指赖在华融安插了不少高官子女；“任人唯圈”是指赖在华融大肆提拔江西同乡，江西籍身份证号码首两位数字为36，华融人自嘲为“36局”。赖是以曾庆红为首的“江西帮”重要成员之一。</p>
+<p>赖小民案被称为中共建政以来“第一金融大案”。</p>
 <h2>二，整肃中共最大电商巨头——马云</h2>
-<p>2020年11月5日，“福布斯中国”发布的中国富豪榜中，马云的财富达到4377亿元人民币，连续第三年位列榜首。</p>
-<p>马云原计划在去年11月，通过蚂蚁金服在沪、港同步上市，再创一次“吸金神话”，却被<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>紧急叫停。之后，马云受到一系列整肃。</p>
+<p>2020年11月5日，“福布斯中国”发布的中国富豪榜中，马云的财富达到4,377亿元人民币，连续第三年位列榜首。</p>
+<p>马云原计划在去年11月，通过蚂蚁金服在沪、港同步上市，再创一次“吸金神话”，却被<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>紧急叫停。之后，马云受到一系列整肃。</p>
 <p>至今年4月12日，蚂蚁集团被中国人民银行、银保监会、证监会、外汇管理局三次约谈。4月10日，阿里巴巴被罚款182亿元人民币，这是中共史上最大的反垄断罚单。4月13日，蚂蚁集团称，其金融业务全部纳入国家监管。5月，马云创办的“湖畔大学”改名“湖畔创研中心”。7月，马云连续缺席中共百年庆典、2021世界人工智能大会等。</p>
-<p>2月17日，《华尔街日报》报道称，前中共独裁者江泽民的孙子江志成，前中共政治局常委、全国政协主席贾庆林的女婿李伯潭等，均是蚂蚁集团的秘密投资者。</p>
+<p>2月17日，《华尔街日报》报导称，前中共独裁者江泽民的孙子江志成，前中共政治局常委、全国政协主席贾庆林的女婿李伯潭等，均是蚂蚁集团的秘密投资者。</p>
 <p>此前，《纽约时报》曾披露，江泽民的孙子江志成，前中共政治局常委、中纪委书记贺国强之子贺锦雷，前中共政治局常委刘云山之子刘乐飞等，都是阿里巴巴的股东。</p>
-<h2>三，整肃中共最大移动出行平台——<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E6%BB%B4%E6%BB%B4%E5%87%BA%E8%A1%8C.md#1">滴滴出行</a></h2>
-<p>6月30日，<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E6%BB%B4%E6%BB%B4%E5%87%BA%E8%A1%8C.md#1">滴滴出行</a>抢在中共百年党庆的前一天，在纽约证券交易所“闪电上市”；7月2日，中共百年党庆的第二天，中共当局对“滴滴出行”进行“闪电监管”。</p>
-<p>7月2日，习当局宣布对滴滴出行实施网络安全审查。7月4日，要求各应用商店下架滴滴出行APP软件。7月7日，滴滴出行4家子公司被开8张反垄断罚单。7月9日，“滴滴企业版”等25款APP被下架。7月10日，《网络安全审查办法（修订草案征求意见稿）》，增加一条：“掌握超过100万用户个人信息的运营者赴国外上市，必须向网络安全审查办公室申报网络安全审查。”7月16日，中共网信办、公安部、安全部等七部门联合进驻滴滴出行，开展网络安全审查。</p>
+<p>据估计，蚂蚁集团上市之前，仅散户申购就创3万亿美元纪录，总市值或可达2.1万亿元人民币（约3,130亿美元）。一旦上市成功，将上演一出全球有史以来规模最大的IPO盛宴（首次公开发行）。</p>
+<p>但是，就在大把大把的钱将要哗哗哗地流入某些中共权贵腰包的前一刻，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>一怒之下，断了这些中共权贵的财路。</p>
+<h2>三，整肃中共最大移动出行平台——<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BB%B4%E6%BB%B4%E5%87%BA%E8%A1%8C.md#1">滴滴出行</a></h2>
+<p>6月30日，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BB%B4%E6%BB%B4%E5%87%BA%E8%A1%8C.md#1">滴滴出行</a>抢在中共百年党庆的前一天，在纽约证券交易所“闪电上市”；7月2日，中共百年党庆的第二天，习近平当局对“滴滴出行”进行“闪电监管”。</p>
+<p>7月2日，习当局宣布对滴滴出行实施网络安全审查。7月4日，要求各应用商店下架滴滴出行APP软件。7月7日，滴滴出行下属4家公司被开8张反垄断罚单。7月9日，“滴滴企业版”等25款APP被下架。7月10日，《网络安全审查办法（修订草案征求意见稿）》，增加一条：“掌握超过100万用户个人信息的运营者赴国外上市，必须向网络安全审查办公室申报网络安全审查。”7月16日，中共网信办、公安部、安全部等七部门联合进驻滴滴出行，开展网络安全审查。</p>
 <p>7月23日，彭博社消息称，中共正考虑对滴滴出行祭出“史无前例的重磅惩罚”。</p>
-<p>滴滴出行的投资者，有红杉资本、阿里巴巴、腾讯、软银等，还有近20家国资背景的投资人，如招商银行、中金甲子、保利资本等。每一家资本巨头背后，都站着一个或几个权贵家族，包括江泽民家族。</p>
+<p>滴滴出行的投资者，有红杉资本、阿里巴巴、腾讯、软银等，还有近20家国资背景的投资人，如保利资本等。每一家资本巨头背后，都站着一个或几个权贵家族，包括江泽民家族。</p>
+<p>滴滴出行原本想汲取蚂蚁集团将要上市却没能上市的教训，抢在习近平“动手”之前，将生米煮成熟饭，让习接受既成事实。</p>
+<p>没想到，习出手那么快、那么狠。据新浪财经消息，至7月6日，滴滴美股市值蒸发了1,400多亿元人民币。</p>
 <h2>四，继续推进政法大清洗</h2>
 <p>7月16日，最高法院执行局局长孟祥被宣告落马。同日，河北省610办公室原主任马玉蝉被查。7月14日，河南省610办公室原主任王文海落马。6月1日，河南省政法委书记甘荣坤被查。5月20日，郑州市政法委书记于东辉被查。5月14日，山东省610办公室原副主任惠从冰被查。4月9日，山西省公安厅长刘新云被查。4月25日，江苏省常州市公安局长杜荣良被查。3月13日，中央610办公室原副主任彭波被查……。</p>
+<p>去年4至10月，原中央政法委书记孟建柱的四大亲信——公安部副部长孙力军、上海市公安局长龚道安、重庆市公安局长邓恢林、江苏省政法委书记王立科相继被查。这一连串的坏消息，对孟建柱的冲击无疑是巨大的。今年4月16日，一向低调、很少抛头露面的孟建柱，专程跑到上海，高调参加江泽民家族的另一亲信、原上海市长杨雄的遗体告别式。</p>
 <p>1999年至今的22年，中央政法委书记罗干、周永康、孟建柱、郭声琨，都是江泽民、曾庆红提拔重用的。习当局从去年7月开始的新一轮政法大清洗，旨在将被称为“刀把子”的政法大权从江、曾手中夺到手。</p>
 <h2>五，武警高层10换9人</h2>
 <p>去年12月至今，王春宁接替王宁任武警部队司令；郑家概、朱祥文接替秦天、于建华任副司令；陈剑飞接替姚立功任副政委，周友亚接替郑家概任参谋长，田义祥接替王小鸣任纪委书记；张林接替孔诚任后勤部长；宋春雳接替管延密任装备部长；汪利平接替高伟任政治工作部主任。短短半年多，武警部队10名高层换了9人。</p>
 <p>武警曾被认为是江泽民的“私家军”，是江的亲信周永康“维稳”的重要工具。在原重庆市公安局长王立军叛逃事件中，江的亲信，时任重庆市委书记薄熙来，曾动用武警包围美国驻成都领事馆。</p>
-<p>习上台后，武警高层几乎全部被查办。武警军政高官几乎全部换人，并将武警由军委和国务院双重领导收归中央军委一家领导。</p>
+<p>习上台后，武警高层，包括原武警司令王建平等，几乎全部被查办。全国武警军政高官，几乎全部换人，并将武警由军委和国务院双重领导收归中央军委一家领导。</p>
+<p>7月24日，武警北京总队司令李维杰在《中国军网》发表文章，强调“贯彻军委主席负责制……具有根本性、决定性作用”；对“影响军委主席负责制贯彻落实的人和事，必须反应快、下手狠、零容忍”。这可能正是习想要的。</p>
 <h2>六，中央警卫局局长换人</h2>
 <p>中央警卫局专门负责保卫中共中央总书记、全国人大委员长、国务院总理、中共政治局常委等的人身安全。</p>
 <p>中央警卫局局长人选，直接关系中共最高领导人的个人安全，同时也关系中共最高领导人能否实现对其他高官的控制。</p>
 <p>据香港《明报》7月15日报导，曾任北部战区陆军副参谋长的少将周洪许，已接任中央警卫局局长。曾任驻福建漳州陆军第31集团军步兵第91师政委的闽籍少将陈登铝，去年11月已出任中央警卫局副局长兼中央警卫团政委。</p>
-<p><ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>上台以来，中央警卫局局长已换了三任——曹清、王少军、周洪许。自1949年中共建政以来，这样的情况未曾有过。这无疑是政局紧张的敏感信号，也是习为“防政变”采取的重大举措。</p>
+<p>习近平上台以来，中央警卫局局长已换了三任——曹清、王少军、周洪许。自1949年中共建政以来，这样的情况未曾有过。这无疑是政局紧张的敏感信号，也是习为“防政变”采取的重大举措。</p>
 <h2>七，审计发现倒卖大宗商品等重大违法线索</h2>
 <p>7月14日，李克强主持召开国务院常务会议，部署中央预算执行和其它财政收支审计查出问题的整改工作。</p>
-<p>据中国政府网报道，审计发现了倒卖大宗商品、偷逃税款等重大违法问题的线索。李克强称“情节十分恶劣”，并在会议上怒拍桌子，要求成立专案组，“无论涉及到什么单位、什么层次，都要一查到底”。</p>
-<p>大宗商品都是供需量大、国家统一限价、影响国计民生的产品或原材料，能够倒卖这些东西的，不是红二代、红三代，就是官二代、官三代，或与之相关的人。</p>
+<p>据中国政府网报导，审计发现了倒卖大宗商品、偷逃税款等重大违法问题的线索。李克强称“情节十分恶劣”，并在会议上怒拍桌子，要求成立专案组，“无论涉及到什么单位、什么层次，都要一查到底”。</p>
+<p>大宗商品都是供需量大、国家统一限价、影响国计民生的产品或原材料。能够倒卖这些东西的，不是红二代、红三代，就是官二代、官三代，或与之相关的人。</p>
 <h2>八，对明天集团九家金融机构托管延长一年</h2>
 <p>7月16日，中共银保监会发布公告，决定对明天集团所属天安财险等6家机构的接管期限延长一年（至明年7月16日）。同日，中共证监会也发布公告，决定对明天集团所属新时代证券等3家机构的接管期限延长一年（至明年7月16日）。</p>
 <p>去年7月16日，中共银保监会和证监会宣布：接管上述明天集团旗下的9家金融机构一年。</p>
@@ -53,62 +61,62 @@
 <p>4月30日，深圳新一届市委领导班子产生。跟上一届市委常委名单比较，除原市委书记马兴瑞等6人晋升，市政法委书记李华楠被查外，上一届市委常委中，只有郑轲一人留下，其他的全部被换。</p>
 <p>4月24日，深圳市人大常委会通过系列人事任免事项。同一天，深圳市18名厅局级以上官员职务发生变动，包括市长、副市长、监察委主任、中级法院院长、检察院检察长等。</p>
 <p>这18名官员中，有10人就职，8人卸职。卸职者大多未到退休年龄，且有多人是握有实权的主要负责人。</p>
-<p>深圳是中共第一个经济特区，从建立之日起，就与<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%97%E6%B5%B7.md#1">中南海</a>直接相关。深圳党政高官的变动，除与地方换届有关外，与中南海权斗也密不可分。</p>
+<p>深圳是中共第一个经济特区，从建立之日起，就与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%97%E6%B5%B7.md#1">中南海</a>直接相关。比如，江泽民的亲信张高丽、黄满丽，都曾担任过深圳市委书记。深圳党政高官的变动，除与地方换届有关外，也与中南海权斗密不可分。</p>
 <h2>简要分析</h2>
-<p>百年中共，你死我活的<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E5%86%85%E6%96%97.md#1">内斗</a>，是其最突出特色之一。从理论上说，它源于中共老祖宗马克思的斗争哲学。</p>
+<p>百年中共，你死我活的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%86%85%E6%96%97.md#1">内斗</a>，是其最突出特色之一。从理论上说，它源于中共老祖宗马克思的斗争哲学。</p>
 <p>习近平上台前，围绕习可能担任的中共党政军最高职位，中共内部就展开了激烈斗争。中共元老薄一波之子、时任中共政治局委员、重庆市委书记薄熙来，是习最大的竞争者。但是，2012年原重庆市公安局长王立军叛逃事件，直接导致薄熙来被抓捕，薄最先出局。</p>
 <p>习近平上台后，为保住权力、当上真正的“习核心”，发动了一场声势浩大的反腐打虎战役。至2017年中共十九大前，查办副省军级以上及其他中管干部440人，包括中共政治局常委，中共政治局委员，中央军委副主席，上将、中将、少将，部长、副部长，省长、省委书记等，还有不少高官跳楼、跳水、服毒、上吊等。其中，大多数都是江泽民、曾庆红提拔重用的。这些人对习可能恨之入骨。</p>
 <p>习近平骑到“老虎”背上已经下不来了。习如果在中共二十大权斗中失败，很可能遭到他的政敌最残酷的“清算”。早在2015年，习的政敌就发公开信威胁习一家老小的性命安全。习不得不一路“斗”下去。</p>
 <p>但是，习的政敌决不甘心被习打压。中共二十大前，他们肯定会汇聚海内外一切反习力量，利用一切机会，不择手段把习赶下台。</p>
 <p>去年11月，有朋友对我说，华尔街巨头与中共权贵准备联手换掉习近平。至今为止，从国内到国外，换掉习的呼声一直不断。</p>
 <p>以上十件大事中，第一、二、三、七、八件大事，都与金融有关，都与上海、深圳、香港、华尔街有关，都与中共权贵家族有关。习对“金融大鳄”的整肃与中共权贵家族反整肃的较量，必将持续下去。</p>
-<p>上述十件大事中，第四、五、六，涉及“枪杆子”（军权）和“刀把子”（政法大权）。从表面看，习已掌握“枪杆子”。但是，习不是军人出身，习掌军权的时间很短，从习频繁换人可以看出，习谁都不相信。因此，很难说，习就牢牢控制了军队。就政法而言，要江、曾交出政法大法，也不是一件容易的事。这两大领域，仍可能有恶斗。</p>
-<p>第九件大事，涉及中共隐瞒疫情等，导致“中共病毒”蔓延全球，给全人类带来的浩劫大难。国际社会肯定会坚持溯源与追责。中共“史上最高级别”官员“叛逃”美国，与病毒真相的不断被揭露，肯定会对<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%97%E6%B5%B7.md#1">中南海</a>产生强大冲击，加剧中共<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E5%86%85%E6%96%97.md#1">内斗</a>升级。</p>
+<p>上述十件大事中，第四、五、六，涉及“枪杆子”（军权）和“刀把子”（政法大权）。从表面看，习已掌握“枪杆子”。但是，习不是军人出身，习掌军权时间很短，从习频繁换人可以看出，习谁都不相信。因此，很难说，习就牢牢控制了军队。就政法而言，要江、曾交出政法大权，也不是一件容易的事。这两大领域，仍可能有恶斗。</p>
+<p>第九件大事，涉及中共隐瞒疫情等，导致“中共病毒”蔓延全球，给全人类带来的浩劫大难。国际社会肯定会坚持溯源与追责。中共“史上最高级别”官员“叛逃”美国，与病毒真相的不断被揭露，肯定会对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%97%E6%B5%B7.md#1">中南海</a>产生强大冲击，加剧中共<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%86%85%E6%96%97.md#1">内斗</a>升级。</p>
 <p>第十件大事，涉及中央集权与地方分权的博弈。有人认为，深圳官场大换血可能与深圳地方官员不顾中央禁令违规炒房有关。从近年发生的陕西秦岭违建别墅案、武汉大瘟疫爆发后地方官员甩锅中央等来看，地方“诸候”不服习者大有人在。</p>
 <h2>结语</h2>
 <p>百年中共已走到最后解体的前夜。中共的解体无疑是上、下、左、右、内、外各种力量综合作用的结果。</p>
 <p>但是，诚如古人所言：“人必自侮，然后人侮之；家必自毁，而后人毁之；国必自伐，而后人伐之。”内斗可能是中共解体最重要的因素之一。</p>
-<p>责任编辑：高义</p>
+<p>责任编辑：高义#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/16/n13094266.md#1">王友群：中共内斗空前激烈的九大信号</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13103354.md#1">王友群：中共外部环境更恶化的九大表现</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/22/n13108443.md#1">王友群：曾庆红是中共深层政府的“总导演”？</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114834.md#1">王友群：恶俗维基案 恶搞习近平 栽赃法轮功</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/16/n13094266.md#1">王友群：中共内斗空前激烈的九大信号</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/21/n13103354.md#1">王友群：中共外部环境更恶化的九大表现</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/22/n13108443.md#1">王友群：曾庆红是中共深层政府的“总导演”？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/25/n13114834.md#1">王友群：恶俗维基案 恶搞习近平 栽赃法轮功</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256379.md#1" target="_blank">观雨堂主：历史并未忘记</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/9/n10377672.md#1" target="_blank">林辉：民国三位大师眼中的共产主义很可怕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/1/8/n4337245.md#1" target="_blank">欧阳非：中共法官们的荒唐言论（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/9/n13079158.md#1">【忽必烈传】马可眼中的皇帝与大元帝国</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111358.md#1">【小宇宙传说】时空穿越 他从1958来到2006年</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/12/n13083162.md#1">苏东坡一身忠直正气 自述多次与鬼神谈判</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/23/n13110635.md#1">【未解之谜】捕捉灵魂的摄影师</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13115201.md#1">【新闻大家谈】姚诚：卖命偷机密 遭卸磨杀驴</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13117257.md#1">【远见快评】疯狂围攻外媒 中共文宣失控？</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114473.md#1">中共FC-31盗窃美国隐形战机 难匹敌F-35</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114084.md#1">视频：郑州一辆被拖出的公交车引发质疑</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113051.md#1">【一线采访】村民加高河堤自救 官兵毁堤泄洪</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114539.md#1">50岁吴奇隆体能惊人 节目竞技完胜24岁男星</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/23/n13110829.md#1">《时代革命》团队宣布：影片版权已转到海外</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111732.md#1">篠原凉子与市村正亲离婚 两儿监护权归父亲</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111390.md#1">《恋人的最后情书》影评：相隔几十年的恋情 也能同时开花结果</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13115286.md#1">池昌旭确诊染疫隔离治疗 新戏暂停拍摄</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13105343.md#1">蔬菜别直接放冰箱！专家：这样保存最长久</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13112330.md#1">高端疫苗安全和保护力未明 专家：施打或仍有2好处</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113232.md#1">被野熊纠缠7天 美国男子在屋顶写SOS获救</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113442.md#1">球赛前突现尘卷风 众人躲 他却“风中漫步”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eeygma3264/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eeygma3264/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13117328.htm">王友群：中南海内斗激烈的十件大事</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13117328.htm">王友群：中南海内斗激烈的十件大事</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13117328.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eeygma3264/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eeygma3264/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/26/n13117328.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
